test/Fail/Polarity-pragma-for-defined-name.agda
{-# OPTIONS --warning=error #-}

A : Set → Set₁
A _ = Set

{-# POLARITY A ++ #-}
